--- a/app/src/main/res/layout/activity_app2.xml
+++ b/app/src/main/res/layout/activity_app2.xml
@@ -54,5 +54,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewResult"
-        app:srcCompat="@drawable/img" />
+        app:srcCompat="@drawable/shar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
