--- a/app/src/main/res/layout/activity_app4.xml
+++ b/app/src/main/res/layout/activity_app4.xml
@@ -6,4 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".App_4">
 
+    <EditText
+        android:id="@+id/edColok"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="166dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="9dp"
+        android:ems="10"
+        android:hint="математическое выражение"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/btnRavno"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnRavno"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="446dp"
+        android:text="="
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edColok" />
 </androidx.constraintlayout.widget.ConstraintLayout>
