--- a/app/src/main/res/layout/activity_app3.xml
+++ b/app/src/main/res/layout/activity_app3.xml
@@ -56,9 +56,23 @@
         android:id="@+id/tvItog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="252dp"
+        android:layout_marginBottom="332dp"
         android:text="ваш результат"
+        android:textColor="#0B0A0A"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imVerno"
+        android:layout_width="382dp"
+        android:layout_height="306dp"
+        android:layout_marginBottom="72dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/img_salut" />
 </androidx.constraintlayout.widget.ConstraintLayout>
